<?xml version="1.0"?>
<package format="3">
  <name>ros2_graph_visualizer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="145927299+Vai-Man@users.noreply.github.com">Manihar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
